--- a/app/src/main/res/layout/fragment_gridview.xml
+++ b/app/src/main/res/layout/fragment_gridview.xml
@@ -10,5 +10,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/gridView"
-        android:numColumns="auto_fit"/>
+        android:numColumns="4"/>
 </LinearLayout>
