--- a/app/src/main/res/layout/fragment_imagelist.xml
+++ b/app/src/main/res/layout/fragment_imagelist.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:background="@android:color/white"
+android:orientation="vertical"
+android:gravity="center_horizontal">
+
 <ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-</ImageView>
+    android:layout_height="wrap_content"
+    android:id="@+id/iconImageView" />
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/fileNameTextView" />
+</LinearLayout>
