--- a/app/src/main/res/layout/fragment_listview.xml
+++ b/app/src/main/res/layout/fragment_listview.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="horizontal"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:gravity="center_vertical">
 
     <ImageView
         android:layout_width="wrap_content"
