--- a/app/src/main/res/menu/menu_show_image.xml
+++ b/app/src/main/res/menu/menu_show_image.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.k_nakamura.horiojapan.kousaku.saitama_u.fileexplorer.ShowImageActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_throwIntent" android:title="ThrowIntent"
+        android:orderInCategory="100" app:showAsAction="ifRoom|withText" />
 </menu>
