--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,9 +5,11 @@
     <item android:id="@+id/action_changeview" android:title="ChangeView"
         android:orderInCategory="100" app:showAsAction="ifRoom|withText" />
 
-    <item android:id="@+id/action_hiddenfile" android:title="隠しファイルを表示"
+    <item android:id="@+id/action_hiddenfile" android:title="隠しファイルを非表示"
         android:orderInCategory="100"  />
     <item android:id="@+id/action_thumbnail_test" android:title="画像一覧"
+        android:orderInCategory="100"  />
+    <item android:id="@+id/action_thumbnail" android:title="サムネイル表示/非表示"
         android:orderInCategory="100"  />
 
 </menu>
