--- a/app/src/main/res/layout/fragment_imagelist.xml
+++ b/app/src/main/res/layout/fragment_imagelist.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:background="@android:color/white"
-android:orientation="vertical"
-android:gravity="center_horizontal">
-
-<ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/iconImageView" />
+    android:background="@android:color/white"
+    android:id="@+id/linear">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/fileNameTextView" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/iconImageView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fileNameTextView" />
 </LinearLayout>
