--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,7 @@
     <item android:id="@+id/action_thumbnail" android:title="サムネイル表示/非表示"
         android:orderInCategory="100"  />
 
+    <item android:id="@+id/action_browseonedrive" android:title="BrowseOneDrive"
+        android:orderInCategory="100"  />
+
 </menu>
